--- a/_posts/2021-01-26-All-Posts.md
+++ b/_posts/2021-01-26-All-Posts.md
@@ -5,7 +5,7 @@ categories: secondary-pages
 tags: page
 ---
 
-Here, you can see all the posts in this site. Use `ctrl + f` or `command + f` to search the post you want to see!
+这里记录了该网站所有的页面，用 `ctrl + f` 或者 `command + f` 来直接搜索你想看的页面吧！
 
 ---
 
