Schedule Page, upload 3 more USACO Solutions, update USACO Solution Page

--- a/_posts/2021-01-26-USACO.md
+++ b/_posts/2021-01-26-USACO.md
@@ -6,7 +6,8 @@ tags: page
 ---
 
 <div class="info">
-  ✅ 目前我们还有一些题目没有给出 Solution，如果你希望把自己的解法放到网页上或者现在的solution存在问题/更优解法，可以联系我们或者以 "USACO Solution" 为主题发送邮件到 286988023@qq.com。我们欢迎所有人的 Solution ！
+  <h3>✅ 我们欢迎你的解析！</h3>
+  目前我们还有一些题目没有给出 Solution，如果你希望把自己的解法放到网页上或者现在的solution存在问题/更优解法，可以联系我们或者以 "USACO Solution" 为主题发送邮件到 286988023@qq.com。<strong>我们欢迎所有人的 Solution ！</strong>
 </div>
 
 这里记载了 2020年下半年以来 我们搜集到的算法队成员日常打卡，如果你发现 USACO 官方solution因为语言不同而晦涩难懂，可以在这里寻找解法。
@@ -15,52 +16,108 @@ tags: page
 
 ---
 
-### 2020
-<div class="card-box">
+### **2021**
+{% assign list = site.tags["USACO-analysis"] | where: 'time', 2021%}
+{% assign dates = "Jan" | split: ", " %}
+
+{% for date in dates %}
+  <h4>{{date}}</h4>
+  <div class="card-box">
+    {% for post in list %}
+      {% if post.question contains date %}
+        <div class="card" onClick="window.location.href='{{ site.baseurl }}{{ post.url }}'">
+          <p><strong>{{ post.group }} | {{ post.time }} {{ post.question }}</strong></p>
+        </div>
+      {% endif %}
+    {% endfor %}
+  </div>
+{% endfor %}
+
+### **2020**
 {% assign list = site.tags["USACO-analysis"] | where: 'time', 2020%}
-{% for post in list %}
-  <div class="card">
-    <p onClick="window.location.href='{{ site.baseurl }}{{ post.url }}'"><strong>{{ post.group }} | {{ post.time }} {{ post.question }}</strong></p>
+{% assign dates = "Jan, Feb, Open, Dec" | split: ", " %}
+
+{% for date in dates %}
+  <h4>{{date}}</h4>
+  <div class="card-box">
+    {% for post in list %}
+      {% if post.question contains date %}
+        <div class="card" onClick="window.location.href='{{ site.baseurl }}{{ post.url }}'">
+          <p><strong>{{ post.group }} | {{ post.time }} {{ post.question }}</strong></p>
+        </div>
+      {% endif %}
+    {% endfor %}
   </div>
 {% endfor %}
-</div>
 
-### 2019
-<div class="card-box">
+### **2019**
 {% assign list = site.tags["USACO-analysis"] | where: 'time', 2019%}
-{% for post in list %}
-  <div class="card">
-    <p onClick="window.location.href='{{ site.baseurl }}{{ post.url }}'"><strong>{{ post.group }} | {{ post.time }} {{ post.question }}</strong></p>
+{% assign dates = "Jan, Feb, Open, Dec" | split: ", " %}
+
+{% for date in dates %}
+  <h4>{{date}}</h4>
+  <div class="card-box">
+    {% for post in list %}
+      {% assign post_data = post.question | split: " " %}
+      {% if post_data[0] == date %}
+        <div class="card" onClick="window.location.href='{{ site.baseurl }}{{ post.url }}'">
+          <p><strong>{{ post.group }} | {{ post.time }} {{ post.question }}</strong></p>
+        </div>
+      {% endif %}
+    {% endfor %}
   </div>
 {% endfor %}
-</div>
 
-### 2018
-<div class="card-box">
+### **2018**
 {% assign list = site.tags["USACO-analysis"] | where: 'time', 2018%}
-{% for post in list %}
-  <div class="card">
-    <p onClick="window.location.href='{{ site.baseurl }}{{ post.url }}'"><strong>{{ post.group }} | {{ post.time }} {{ post.question }}</strong></p>
+{% assign dates = "Jan, Feb, Open, Dec" | split: ", " %}
+
+{% for date in dates %}
+  <h4>{{date}}</h4>
+  <div class="card-box">
+    {% for post in list %}
+      {% assign post_data = post.question | split: " " %}
+      {% if post_data[0] == date %}
+        <div class="card" onClick="window.location.href='{{ site.baseurl }}{{ post.url }}'">
+          <p><strong>{{ post.group }} | {{ post.time }} {{ post.question }}</strong></p>
+        </div>
+      {% endif %}
+    {% endfor %}
   </div>
 {% endfor %}
-</div>
 
-### 2017
-<div class="card-box">
+### **2017**
 {% assign list = site.tags["USACO-analysis"] | where: 'time', 2017%}
-{% for post in list %}
-  <div class="card">
-    <p onClick="window.location.href='{{ site.baseurl }}{{ post.url }}'"><strong>{{ post.group }} | {{ post.time }} {{ post.question }}</strong></p>
-  </div>
-{% endfor %}
-</div>
+{% assign dates = "Jan, Feb, Open, Dec" | split: ", " %}
 
-### 2016
-<div class="card-box">
-{% assign list = site.tags["USACO-analysis"] | where: 'time', 2016%}
-{% for post in list %}
-  <div class="card">
-    <p onClick="window.location.href='{{ site.baseurl }}{{ post.url }}'"><strong>{{ post.group }} | {{ post.time }} {{ post.question }}</strong></p>
+{% for date in dates %}
+  <h4>{{date}}</h4>
+  <div class="card-box">
+    {% for post in list %}
+      {% assign post_data = post.question | split: " " %}
+      {% if post_data[0] == date %}
+        <div class="card" onClick="window.location.href='{{ site.baseurl }}{{ post.url }}'">
+          <p><strong>{{ post.group }} | {{ post.time }} {{ post.question }}</strong></p>
+        </div>
+      {% endif %}
+    {% endfor %}
   </div>
 {% endfor %}
-</div>
+
+### **2016**
+{% assign list = site.tags["USACO-analysis"] | where: 'time', 2016%}
+{% assign dates = "Jan, Feb, Open, Dec" | split: ", " %}
+
+{% for date in dates %}
+  <h4>{{date}}</h4>
+  <div class="card-box">
+    {% for post in list %}
+      {% assign post_data = post.question | split: " " %}
+      {% if post_data[0] == date %}
+        <div class="card" onClick="window.location.href='{{ site.baseurl }}{{ post.url }}'">
+          <p><strong>{{ post.group }} | {{ post.time }} {{ post.question }}</strong></p>
+        </div>
+      {% endif %}
+    {% endfor %}
+  </div>
+{% endfor %}
