Update First Page, 6 USACO Solution Added, ACSL page added

--- a/_posts/2021-01-26-About-Us.md
+++ b/_posts/2021-01-26-About-Us.md
@@ -5,4 +5,10 @@ categories: secondary-pages
 tags: page
 ---
 
-We are the CHGZFLS Computer Science Club, we aim to build up a home and community for people who are interested in computer science to share information with each other and find for help.
+<img src="{{ site.baseurl }}/assets/aboutUs_1.svg" height="35%" width="35%" style="float:left; margin: 10px"/>
+
+我们是广外 CS 社，我们希望为所有对计算机科学感兴趣的人建立一个共同的社区。在这个社区中，我们分享自己的知识并互相帮助与学习。
+
+我们欢迎所有想从0开始学习编程或者继续精进自己编程技术的人。我们并不局限于特殊的几种编程语言与竞赛，如果你想做任何有趣的编程项目，我们欢迎你将自己的代码仓库链接展示在我们的网页上。
+
+<div style="clear: both"></div>
