--- a/_posts/2021-01-26-All-Posts.md
+++ b/_posts/2021-01-26-All-Posts.md
@@ -9,8 +9,12 @@ tags: page
 
 ---
 
-<ul class="posts">
-    {% for post in site.posts %}
+{% assign sorted_tags = site.tags | sort %}
+{% for tag in sorted_tags %}
+  <h3>{{ tag[0] }} ({{tag[1] | size}} posts)</h3>
+  <ul>
+    {% for post in tag[1] %}
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
-</ul>
+  </ul>
+{% endfor %}
