--- a/_posts/2021-01-26-Schedule.md
+++ b/_posts/2021-01-26-Schedule.md
@@ -20,6 +20,16 @@ tags: page
 <p>下一场USACO - 2021 Feb 26 - Mar 1</p>
 </div>
 
+<div class="info">
+<h4>ACSL Round 2</h4>
+<p>Now - 2021 Mar 6</p>
+</div>
+
+<div class="info">
+<h4>ACSL Round 3</h4>
+<p>2021 Jan 29 - 2021 Apr 10</p>
+</div>
+
 ---
 
 ## Meet TAs!
