--- a/_posts/acsl-note/2021-01-26-ACSL.md
+++ b/_posts/acsl-note/2021-01-26-ACSL.md
@@ -18,7 +18,7 @@ tags: page
             Pseudocode
         </p>
     </div>
-    <div class="lite-card">
+    <div class="lite-card"  onClick="window.location.href='{{ site.baseurl }}/2020/02/10/ACSL-Round2.html'">
         <h3>ACSL Round 2</h3>
         <p>
             Pre/in/post-fix<br/>
