Update Website Structure, add Head Nav Bar, TOC and Report Error Popup

--- a/_posts/2021-01-26-Schedule.md
+++ b/_posts/2021-01-26-Schedule.md
@@ -30,38 +30,32 @@ tags: page
 
 如果你在计算机学习 / 竞赛 方面有任何问题，欢迎找助教们预约时间见面答疑！
 
-<html>
-<img src="https://s3.ax1x.com/2020/11/22/D3sNBn.jpg" alt="D3sNBn.jpg" border="0"  width=150px style="float:left; margin: 0 20px"/>
-<p>Mark 陈昱天<br />S3 AP6<br />Wechat: MarkChen2003<br /></p>
-<button onclick="Calendly.initPopupWidget({url: 'https://calendly.com/markchenyutian/apmidterm10min'});return false;">
+<!--<img src="https://s3.ax1x.com/2020/11/22/D3sNBn.jpg" alt="D3sNBn.jpg" border="0"  width=150px style="float:left; margin: 0 20px"/>-->
+<p style="float:left">Mark 陈昱天<br />S3 AP6<br />Wechat: MarkChen2003<br /></p>
+<div class="main-button" style="float:right" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/markchenyutian/apmidterm10min'});return false;">
 点击预约一对一
-</button>
+</div>
 <div style="clear: both"></div>
-</html>
 
-<html>
-<img src="https://s3.ax1x.com/2020/11/22/D3soge.png" alt="D3soge.png" border="0" width=150px style="float:left; margin: 0 20px"/>
-<p>Kayla 王嘉仪 <br />S3 AP6<br />Wechat: k531531_<br /></p>
-<button onclick="Calendly.initPopupWidget({url: 'https://calendly.com/kayla0531/10min'});return false;">
+<!--<img src="https://s3.ax1x.com/2020/11/22/D3soge.png" alt="D3soge.png" border="0" width=150px style="float:left; margin: 0 20px"/>-->
+<p style="float:left">Kayla 王嘉仪 <br />S3 AP6<br />Wechat: k531531_<br /></p>
+<div class="main-button" style="float:right" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/kayla0531/10min'});return false;">
 点击预约一对一
-</button>
+</div>
 <div style="clear: both"></div>
-</html>
 
-<html>
-<img src="https://s3.ax1x.com/2020/11/22/D36PzD.jpg" alt="D36PzD.jpg" border="0" width=150px style="float:left; margin: 0 20px"/>
-<p>Jenny 廖芷婧<br />S3 AP6<br />Wechat: lzj13632210235<br /></p>
-<button onclick="Calendly.initPopupWidget({url: 'https://calendly.com/jenny-jing/mid-term'});return false;">
+<!--<img src="https://s3.ax1x.com/2020/11/22/D36PzD.jpg" alt="D36PzD.jpg" border="0" width=150px style="float:left; margin: 0 20px"/>-->
+<p style="float: left">Jenny 廖芷婧<br />S3 AP6<br />Wechat: lzj13632210235<br /></p>
+<div class="main-button" style="float:right" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/jenny-jing/mid-term'});return false;">
 点击预约一对一
-</button>
+</div>
 <div style="clear: both"></div>
-</html>
 
-<html>
-<img src="https://s3.ax1x.com/2020/11/22/D3yHRU.jpg" alt="D3yHRU.jpg" border="0" width=150px style="float:left; margin: 0 20px"/>
-<p>Clara 曾嫱<br />S3 AP6<br />Wechat: 2198690029<br /></p>
-<button onclick="Calendly.initPopupWidget({url: 'https://calendly.com/clarazq/mid-term-interview'});return false;">
+<!--<img src="https://s3.ax1x.com/2020/11/22/D3yHRU.jpg" alt="D3yHRU.jpg" border="0" width=150px style="float:left; margin: 0 20px"/>-->
+<p style="float: left">Clara 曾嫱<br />S3 AP6<br />Wechat: 2198690029<br /></p>
+<div class="main-button"  style="float:right" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/clarazq/mid-term-interview'});return false;">
 点击预约一对一
-</button>
+</div>
 <div style="clear: both"></div>
-</html>
+
+
