--- a/_posts/notes/Algorithm/2021-02-22-Sorting.md
+++ b/_posts/notes/Algorithm/2021-02-22-Sorting.md
@@ -8,10 +8,6 @@ tags: Algorithm Notes
 
 大部分人的算法入门都是通过各种排序算法开始的，通过学习排序算法，我们可以清楚的比较算法之间的优劣和不同的特性来体会为什么我们需要算法，以及算法能够如何提升我们程序的效率。
 
-<center><strong>目录</strong></center>
-
-[toc]
-
 在开始之前，先给一个非常实用的算法可视化网站 - [VisualAlgo](https://visualgo.net/en/sorting)！如果你有没理解的算法，可以在这个网站上选择对应的算法观看它的可视化来辅助理解。
 
 当然，如果你有问题在尝试自己寻找答案后还没搞懂，欢迎来找助教们问问题 [点击这里找助教]({{ site.baseurl }}/secondary-pages/2021/01/26/Schedule.html) （提问前可以先看看这篇文章：[提问的方法]({{ site.baseurl }}/2021/02/01/How-to-ask-Questions.html)）
@@ -20,7 +16,7 @@ tags: Algorithm Notes
 
 <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210222182952.png" alt="image-20210222182952336" style="zoom:50%;" />
 
-<center><em> 来源：《算法导论》 Page 150</em></center>
+<em> 来源：《算法导论》 Page 150</em>
 
 ---
 
