--- a/_posts/notes/Algorithm/2021-02-22-Sorting.md
+++ b/_posts/notes/Algorithm/2021-02-22-Sorting.md
@@ -57,6 +57,7 @@ $$
 我们将序列( 比如 Array/ArrayList )中的元素从<u>**逻辑上分成两个部分**</u>，左边是已经排好序的 (sorted)，右边是还没有排好序的 (unsorted)。选择排序的思路就是<u>**选择 unsorted 中的最小元素， 和 unsorted 中的第一个元素进行交换**</u>。
 
 **伪代码**
+
 $$
 \begin{align*}
 &\text{Selection-Sort(A)}\\
@@ -78,6 +79,8 @@ $$
 > 《算法导论》书本 Page 40
 
 每次比较两个两两相邻的元素，如果较大的数字在前，将两个数字交换一下
+
+**伪代码**
 
 <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210222184937.png" alt="image-20210222184937089" style="zoom:50%;" />
 
