--- a/_posts/notes/cs188/2021-02-24-CS188-Home.md
+++ b/_posts/notes/cs188/2021-02-24-CS188-Home.md
@@ -6,7 +6,7 @@ tags: page
 ---
 
 <hr style="clear:right"/>
-<img src="{{ site.baseurl }}/assets/cs188_logo.png" style="float: left; height: 40%; width: 40%; margin: 0px 16px 8px 0px"/>
+<img src="{{ site.baseurl }}/assets/cs188_logo.png" style="float: left; height: 40%; width: 40%; margin: 0px 16px 8px 0px; border-radius: 10px"/>
 
 这里是 2019 - 2020 学年 CS2: Artificial Intelligence 的课程笔记汇总首页。这门课程是基于 UC Berkeley CS188: Artificial Intelligence 的大纲和 Project 开展的。点击这里可以看到这门课的 Project 列表和 UCB 教授上课用的 PPT。
 
@@ -30,6 +30,17 @@ tags: page
 
 <p>这节课的官网，其中包括Project，和教授的 PPT 和对应的作业练习 - <a href="https://cs188.ml/">CS188 官网</a></p>
 
-<p>教授的课程录课视频在 YouTube 上有，每学完一个知识点，可以观这个 playlist 里面对应的视频</p>
+<p>教授的课程录课视频在 YouTube 上有，每学完一个知识点，可以看看这个 playlist 里面对应的视频</p>
 
-<div style="clear:both"></div>
+<hr style="clear:both"/>
+
+### 笔记
+
+*(笔记大部分是英文的，因为：1. 我懒得再翻译一遍  2. 我会 Assume 你可以正常阅读英文的东西……)*
+
+| 章节                 | 描述                                                         | 链接                                                    |
+| -------------------- | ------------------------------------------------------------ | ------------------------------------------------------- |
+| 1. What is AI        | 这一章从多个角度定义了“人工智能”，以及为了产生人工智能，在各个领域需要解决的问题 | [笔记]({{site.baseurl}}/2021/02/25/CS188-Chapter1.html) |
+| 2. Intelligent Agent | 这一章详细的描述了一个 Agent 的定义以及我们如何判断一个 Agent 的行为是“好”的 | [笔记]({{site.baseurl}}/2021/02/28/CS188-Chapter2.html) |
+| 3. Searching Methods | 这一章描述了几种常用的搜索算法，包括 BFS, DFS, UCS, A* Search 和 Greedy Search | [笔记]({{site.baseurl}}/2021/02/28/CS188-Chapter3.html) |
+
