Remove TOC on First Page

--- a/_posts/notes/cs188/2021-02-28-CS188-Chapter3.md
+++ b/_posts/notes/cs188/2021-02-28-CS188-Chapter3.md
@@ -5,68 +5,86 @@ Author: Mark
 tags: Notes CS188
 ---
 
-### 3.0 How do we Evaluate a Search Algorithm
+
+
+<div class="info">
+    <h3>
+        The Relationship between Searching and AI
+    </h3>
+    <p>
+        As we have mentioned in chapter 1 and 2, an Intelligent Agent can maximize the utility in a given environment by control its behavior. Searching Algorithm is a very useful algorithm to find the <strong>sequence of actions</strong> that will maximize the utility.
+    </p>
+</div>
+
+### Terminologies
+
+| **Term**                  | **Explanation**                                              |
+| ------------------------- | ------------------------------------------------------------ |
+| State                     | One status of environment, which can be represented using a series of parameters |
+| State Space               | All the states an environment can have. The state space can either be finite or infinite. |
+| Action                    | The behavior of Agent. Usually Action can change the State (note: not *always*). |
+| Fringe                    | The states in state space that is about to explore (expand) by the searching algorithm. |
+| State Transition Function | The function that describe how state change between each other (how state transit). |
+| Successor                 | The states that directly resulted from current state.<br />$\text{currState}\quad \underrightarrow{Action} \quad \text{Successors}$ |
+
+### 3.0 How do We Evaluate a Search Algorithm
 
 We can evaluate a searching method in several aspects, as shown below:
 
->* **Consistency**, given a State Space with Goal State in it, the algorithm MUST can find an action sequence that leads to the goal state
->* **Optimality**, Given a State Space that has Goal State in it, the searching algorithm Must can find the Best Action Sequence that can lead to the Goal State
->* **Time Complexity**
->* **Space Complexity**
+>* **Consistency**, given a State Space with Goal State in it, the algorithm MUST be able to find an action sequence that leads to the goal state.
+>* **Optimality**, Given a State Space that has Goal State in it, the searching algorithm MUST be able to find the Best Action Sequence that can lead to the Goal State
+>* **Time Complexity**, how many computation time it takes for the algorithm to find the Best Action Sequence to the Goal State
+>* **Space Complexity**, how many memory it use for the algorithm to find the Best Action Sequence to the Goal State.
 
-### 3.1 BFD Breadth First Search
+### 3.1 Breadth First Search (BFS)
 
-Breadth First Search can be used to search in the state space to find a sequence of actions that will lead to the Goal State.
+> BFS is both Consistent and Optimal.
 
-The BFD algorithm **First expand the shallowest node in the state space**.
+In the BFS algorithm, **The shallowest state in state space is expanded first**.
 
-Breadth First Search is a very useful searching method, since it can fulfill two important requirements to a Searching Algorithm:
+Due to this feature, when there are multiple goal states in the state space, the BFS can always find the shallowest goal state. Therefore, when all the actions have same cost, the BFS can always find the action sequence to goal state that have least cost.
 
-* Complement
-* Optimal
+The fringe of BFS is a **Stack** where FIFO policy applies.
 
-When all actions has the same cost, the first Goal State BFS has found is the State that needs **Least Actions** to reach, so the cost is optimal among all the Searching Methods.
 
-In BFS: the Fringe of BFS, the Fringe is a **Stack** that applies the FIFO policy.
+
+**Code Example**
 
 ```python
-def breadthFirstSearch(problem):
-    """Search the shallowest nodes in the search tree first."""
-    "*** YOUR CODE HERE ***"
-    from util import Queue
-
-    ExploredNodes = set()
-    FringeNodes = Queue()
-
-    InitialState = problem.getStartState()
-
-    FringeNodes.push((InitialState, []))
-
-    while not FringeNodes.isEmpty():
-        NowNodeData = FringeNodes.pop()
-        NowState = NowNodeData[0]
-        NowPath = NowNodeData[1]
+def breadthFirstSearch(initialState, getSuccessor, getValidActions):
+    """
+    :param initialState: The Initial State of problem (sometimes the 'current state')
+    :param getSuccessor: The State Transition Function that return the successors given the current state and action
+    :param getValidActions: A function taht takes current state and return a list of valid actions under current state
+    """
+    fringe = stack()
+    exploredStates = set()
+    
+    # Add the Initial State into the Fringe before Searching Actually Start.
+    fringe.push(initialState)
+    while len(fringe) > 0:
+		currState = fringe.pop()
+        if currState in exploredStates: continue
+        else: exploredState.add(currState)
+            
+        # Do Something Here
         
-        if problem.isGoalState(NowState): return NowPath
-
-        # If the Node has been explored
-        if NowState in ExploredNodes: continue
-
-        ExploredNodes.add(NowState)
-        Successors = problem.getSuccessors(NowState)
-
-        for Successor in Successors:
-            action = Successor[1]
-            SuccessorState = Successor[0]
-
-            ActionSequence = NowPath[:]
-            ActionSequence.append(action)
-            FringeNodes.push((SuccessorState, ActionSequence))
+        for action in getValidActions(currState):
+            # Add Successor States into the fringe
+            successor = getSuccessor(currState, action)
+            if successor not in exploredStates: fringe.push(successor)
 ```
 
-### 3.2 DFS Depth First Search
+<center>Pros and Cons of BFS Algorithm</center>
 
-Depth First Search can be used to search in the state space to find a sequence of actions that will lead to the Goal State as well.
+| Pros                                                         | Cons                                                         |
+| ------------------------------------------------------------ | ------------------------------------------------------------ |
+| **The Optimality of Searching Result** - the nearest goal state will always return first | **High Space Complexity** - The BFS algorithm requires much memory to maintain the fringe. Suppose each state leads to $3$ successors, when searching on a tree with height $10$, the fringe will have a size of $3^{10}\approx 60000$. (Space Complexity $O(m^n)$) |
+| **Easy to implement** - no complex data structure required, the foundation of most searching algorithms | **High Time Complexity** - Suppose the goal state is at depth $n$, and on average each state has $m$ successors, the time complexity of BFS will be $O(m^{n+1})$ |
+
+### 3.2 Depth First Search (DFS)
+
+> DFS is only Consistent, not Optimal
 
 The DFS algorithm will **First expand the Deepest node in the State space**
 
@@ -178,16 +196,16 @@ def uniformCostSearch(problem):
 
 In the UCS, we need to use the Priority Queue, there are two modulus in the Python that can perform the priority queue: `PriorityQueue` and `heapq`
 
-### 3.4 A* Search
+### 3.4 A\* Search
 
-**A\* Search** is a kind of **Informed Search**, which gain some more knowledge about the question. Unlike the UCS method, which only focus on the cost from initial state to the current state, A* search also concern the approximate future cost of the action sequence.
+**A\* Search** is a kind of **Informed Search**, which gain some more knowledge about the question. Unlike the UCS method, which only focus on the cost from initial state to the current state, A\* search also concern the approximate future cost of the action sequence.
 
-**Admissive and Consistency** are two ways to evaluate whether a Heuristic Function is optimal or not. The A* search is optimal only if the Heuristic Function is both Admissive and Consistency.
+**Admissive and Consistency** are two ways to evaluate whether a Heuristic Function is good or not. The A\* search is optimal only if the Heuristic Function is both Admissive and Consistency.
 
 Some common Heuristic Functions:
 
->Manhatten Distance:
->Manhatten Distance s the sum of verticle distance and the horizontal distance between goal state and current state.
+>**Manhattan Distance**
+>Manhattan Distance s the sum of vertical distance and the horizontal distance between goal state and current state.
 
 ```python
 def ManhattenDistance(NowPosition, TargetPosition):
@@ -196,7 +214,7 @@ def ManhattenDistance(NowPosition, TargetPosition):
     return (abs(Targetx - Nowx)+abs(Targety - Nowy))
 ```
 
->Euclid Distance:
+>**Euclid Distance**
 >Euclid Distance is the linear distance between the current state and the goal state.
 
 ```python
@@ -263,7 +281,7 @@ def aStarSearch(problem, heuristic=nullHeuristic):
             seqNum += 1
 ```
 
-Notice that a **A\* Search** will be optimistic when the Heuristic function is both admissive and consistent. It should be notice that there's a vast varity of functions can be selected as the Heuristic function (i.e. `return 0`), but only a good heuristic function is not trivial and can help up reduce the expanded nodes in the state space.
+Notice that a **A\* Search** will be optimistic when the Heuristic function is both admissive and consistent. It should be notice that there's a vast variety of functions can be selected as the Heuristic function (i.e. `return 0`), but only a good heuristic function is not trivial and can help up reduce the expanded nodes in the state space.
 
 ### 3.5 Greedy Search
 
@@ -274,6 +292,6 @@ Greedy Search is a way to find the best solution in a local area and doing such 
 
 The code of Greedy Search does not has a fixed structure like that of UCS, BFS etc. So the code won't be shown below.
 
-### *3.6 Prove the Optimality of A* Search
+### \*3.6 Prove the Optimality of A\* Search
 
-<div class="info">如果这里还是空着的说明 Mark 还在偷懒，不过你可以看 <em>Artificial Intelligence, A Modern Approach</em> Page 95, Section 3.5 - Optimality of A* 来自己研究这一部分</div>
+<div class="info">如果这里还是空着的说明 Mark 还在偷懒，不过你可以看 <em>Artificial Intelligence, A Modern Approach</em> Page 95, Section 3.5 - Optimality of A* 来自己研究这一部分</div> 
