--- a/_posts/notes/cs188/2021-02-24-CS188-Home.md
+++ b/_posts/notes/cs188/2021-02-24-CS188-Home.md
@@ -23,7 +23,9 @@ tags: page
 
 ### 课程资料
 
-<iframe width="50%" height="250px" src="https://www.youtube.com/embed/videoseries?list=PLVYtzYiUdm4ThHyh_pnhNQwdmN_OmryLc&index=2" frameborder="0" allow="encrypted-media" allowfullscreen style="border-radius: 10px; float:right; margin: 0px 0px 0px 16px"></iframe>
+<iframe width="50%" height="250px" src="https://www.youtube.com/embed/videoseries?list=PLVYtzYiUdm4ThHyh_pnhNQwdmN_OmryLc&index=2" frameborder="0" allow="encrypted-media" allowfullscreen style="border-radius: 10px; float:right; margin: 0px 0px 0px 16px">
+Try connect the internet in a more scientific way to see this playlist.
+</iframe>
 
 
 <p>这节课使用的课本：*Artificial Intelligence, A Modern Approach*</p>
@@ -42,5 +44,5 @@ tags: page
 | -------------------- | ------------------------------------------------------------ | ------------------------------------------------------- |
 | 1. What is AI        | 这一章从多个角度定义了“人工智能”，以及为了产生人工智能，在各个领域需要解决的问题 | [笔记]({{site.baseurl}}/2021/02/25/CS188-Chapter1.html) |
 | 2. Intelligent Agent | 这一章详细的描述了一个 Agent 的定义以及我们如何判断一个 Agent 的行为是“好”的 | [笔记]({{site.baseurl}}/2021/02/28/CS188-Chapter2.html) |
-| 3. Searching Methods | 这一章描述了几种常用的搜索算法，包括 BFS, DFS, UCS, A* Search 和 Greedy Search | [笔记]({{site.baseurl}}/2021/02/28/CS188-Chapter3.html) |
+| 3. Searching Methods | 这一章描述了几种常用的搜索算法，包括 BFS, DFS, UCS, A* Search 和 Greedy Search | [笔记]({{site.baseurl}}/2021/02/28/CS188-Chapter3.html)  [Project 1](https://cs188.ml/project1/) |
 
