--- a/_posts/notes/cs188/2021-02-28-CS188-Chapter3.md
+++ b/_posts/notes/cs188/2021-02-28-CS188-Chapter3.md
@@ -84,7 +84,9 @@ def breadthFirstSearch(initialState, getSuccessor, getValidActions):
 
 ### 3.2 Depth First Search (DFS)
 
-> DFS is only Consistent, not Optimal
+<div class="notification">
+    DFS is only Consistent, not Optimal
+</div>
 
 The DFS algorithm will **First expand the Deepest node in the State space**
 
