Update Algorithm FrontPage

--- a/404.md
+++ b/404.md
@@ -1,10 +1,13 @@
 ---
 layout: default
 permalink: /404.html
+useTOC: false
 title: 404 Error
 ---
 
-呃，你好像来到了奇怪的地方……
+<center><img src="{{ site.baseurl }}/assets/404.svg" style="zoom: 60%; margin: -110px auto 0px auto;"/></center>
+
+你好像来到了奇怪的地方……
 
 <div class="card-box">
 <div class="card">
