--- a/_posts/notes/Algorithm/2021-02-22-Sorting.md
+++ b/_posts/notes/Algorithm/2021-02-22-Sorting.md
@@ -1,9 +1,20 @@
 ---
-layout: post
+layout: algo_note
 title: 排序算法
 tags: Algorithm Notes
 Author: Mark
 ---
+
+### 前置条件
+
+在学习这个知识点前，你应该先学习……
+
+<ul class="time-vertical" style="margin-left: 32px;">
+    <li><offline></offline><a href="">数据结构：列表 Array (List) and ArrayList</a></li>
+    <li><online></online><a href="{{ site.baseurl }}/2021/03/02/Time-Complexity.html">理论基础：时间复杂度 Time Complexity</a></li>
+    <li><offline></offline><a href="">算法：递归 Recursion</a></li>
+    <li><offline></offline><a href="">算法：分治算法 Divide and Conquer</a></li>
+</ul>
 
 ### 排序算法入门
 
@@ -15,9 +26,9 @@ Author: Mark
 
 #### 排序算法性能对比
 
-<img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210222182952.png" alt="image-20210222182952336" style="zoom:50%;" />
+<img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210222182952.png" alt="image-20210222182952336" style="zoom:50%; margin: 0px auto 0px auto; display: block;" />
 
-<em> 来源：《算法导论》 Page 150</em>
+<center><em> 来源：《算法导论》 Page 150</em></center>
 
 ---
 
@@ -28,6 +39,7 @@ Author: Mark
 > 《算法导论》书本 Page 16 - 20
 
 我们将序列( 比如 Array/ArrayList )中的元素从<u>**逻辑上分成两个部分**</u>，左边是已经排好序的 (sorted)，右边是还没有排好序的 (unsorted)。
+
 $$
 \begin{equation*}
 \left[\begin{array}{ccccc|ccc}
@@ -35,6 +47,7 @@ $$
 \end{array}\right]
 \end{equation*}
 $$
+
 插入排序的思路就是<u>**不断地将 unsorted 中的第一个元素，插入到左边 sorted 部分的相应位置**</u>。这样的话，每插入一次，sorted 部分的s长度就会增加一。不断重复插入这个动作，直到整个数组排好序为止
 
 **理解要点**
@@ -49,7 +62,38 @@ $$
 
 
 
-<img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210222180501.png" alt="image-20210222180501499" style="zoom: 33%;" />
+<img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210222180501.png" alt="image-20210222180501499" style="zoom: 33%; margin: 0px auto 0px auto; display: block;" />
+
+
+**代码范例**
+
+<pre>
+<code class="python">
+def insertionSort(arr: list) -&gt; list:
+    for i in range(2, len(arr)):
+        key = arr[i]
+        j = i - 1
+        while (j &gt; 0 and arr[j] &gt; key):
+            arr[j + 1] = arr[j]
+            j -= 1
+        a[j + 1] = key
+    return arr
+</code>
+<code class="java">
+public static ArrayList&lt;Integer&gt; insertionSort(&lt;ArrayListInteger&gt; arr){
+  for (int i = 1; i &lt; arr.size(); i ++){
+      int key = arr.get(i);
+      int j = i - 1;
+      while (j &gt; 0 && arr.get(j) &gt; key){
+          arr.set(j + 1, arr.get(j));
+          j -= 1;
+      }
+      arr.set(j + 1, key);
+  }
+  return arr;
+}
+</code>
+</pre>
 
 #### 选择排序 Selection Sort
 
@@ -73,6 +117,56 @@ $$
 \end{align*}
 $$
 
+**代码实现**
+
+<pre>
+<code class="python">
+def selectionSort(arr: list) -&gt; list:
+    for i in range(len(arr)):
+        minValue = float("inf")
+        minIndex = -1
+        for j in range(i, len(arr)):
+            if arr[j] &lt; miValue:
+                minValue = arr[j]
+                minIndex = j
+        
+        # Python's Special Method to swap value of variables
+        arr[i], arr[minIndex] = arr[minIndex], arr[i]
+</code>
+<code class="java">
+public static ArrayList&lt;Integer&gt; selectionSort(ArrayList&lt;Integer&gt; arr){
+  for (int i = 0; i &lt; arr.size(); i ++){
+      int minValue = Integer.MAX_VALUE;
+      int minIndex = -1;
+      for (int j = i; j &lt; arr.size(); j ++){
+          if (arr.get(j) &lt; minValue){
+              minValue = arr.get(j);
+              minIndex = j;
+          }
+      }
+      int temp = arr.get(i);
+      arr.set(i, minValue);
+      arr.set(minIndex, temp);
+  }
+  return arr;
+}
+</code>
+</pre>
+
+<div class="python">
+<p>在上面的代码中，我们用了一个特殊的 Python 语法来交换两个变量的值。这种语法可以省略声明一个 temp 变量做中转的麻烦。</p>
+<pre>
+>>> a = 1
+>>> b = 2
+>>> a, b = b, a
+>>> a
+2
+>>> b
+1
+</pre>
+</div>
+
+
 #### 冒泡排序 Bubble Sort
 
 > 时间复杂度 $O(n^2)$
@@ -87,13 +181,41 @@ $$
 
 冒泡排序时间复杂度比较高，但是表现比较稳定，实现简单，所以是一种比较常见的排序算法
 
+**算法实现**
+<pre>
+<code class="python">
+def bubbleSort(arr: list) -> list:
+    for i in range(0, len(arr) - 1):
+        for j in range(len(arr), i + 1, -1):
+            if arr[j] > arr[j - 1]:
+                arr[j], arr[j - 1] = arr[j - 1], arr[j]
+    return arr
+</code>
+<code class="java">
+public static ArrayList&lt;Integer&gt; bubbleSort(ArrayList&lt;Integer&gt; arr){
+    for (int i = 0; i &lt; arr.size() - 1; i ++){
+        for (int j = arr.size(); j &gt; i + 1; j --){
+            if (arr.get(j) &gt; arr.get(j - 1)){
+                int temp = arr.get(j);
+                arr.set(j, arr.get(j - 1));
+                arr.set(j - 1, temp);
+            }
+        }
+    }
+    return arr;
+}
+</code>
+</pre>
+
 #### 归并排序 Merge Sort
 
 > 时间复杂度 $O(n\log{n})$
 >
 > 《算法导论》书本 Page 30 - 34
 
-> ⚠ 在实现这一个算法前，你应该对函数和递归有较为清楚的了解，如果你对递归还不是很熟练，可以先在这个网站 [Coding Bat](https://codingbat.com/java) 完成 Recursion -1 与 Recursion - 2 的题目
+<div class="notification">
+⚠ 在实现这一个算法前，你应该对函数和递归有较为清楚的了解，如果你对递归还不是很熟练，可以先在这个网站 <a href="https://codingbat.com/java">Coding Bat</a> 完成 Recursion - 1 与 Recursion - 2 的题目
+</div>
 
 每次我们将一个给定的序列分成两份，并且用归并排序递归的对分出来的两个子序列分别排序，直到子序列长度为1为止。接着开始合并。因为两侧的子序列都已经被排好序了，每次只用对比子序列最左侧的两个数，取较小的数字到结果的序列中。
 
@@ -105,13 +227,94 @@ $$
 
 <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210222194109.png" alt="image-20210222194108992" style="zoom: 45%;" />
 
+**代码实现**
+<pre>
+<code class="python">
+def merge(a, b, m, e):
+    l = a[b : m + 1]
+    r = a[m + 1 : e + 1]
+    k = b
+    i = 0
+    j = 0
+    while i < len(l) and j < len(r):
+        if l[i] < r[j]:
+            a[k] = l[i]
+            i += 1
+        else:
+            a[k] = r[j]
+            j += 1
+        k += 1
+    while i < len(l):
+        a[k] = l[i]
+        i += 1
+        k += 1
+    while j < len(r):
+        a[k] = r[j]
+        j += 1
+        k += 1
+    return a
+
+
+def mergesort(a, b, e):
+    if b < e:
+        m = (b + e) // 2
+        mergesort(a, b, m)
+        mergesort(a, m + 1, e)
+        merge(a, b, m, e)
+        return a
+</code>
+<code class="java">
+ public static void mergeSort(ArrayList&lt;Integer&gt; arr, int left, int right){
+     if (right &lt;= left){ return; }
+     int middle = (left + right) / 2;
+     // Recursion Case
+     mergeSort(arr, left, middle);
+     mergeSort(arr, middle + 1, right);
+
+     //Merge the result of sorted sub-arrays
+     int[] leftArr = new int[middle - left];
+     int[] rightArr = new int[right - middle - 1];
+     for (int i = left; i &lt;= middle; i ++){
+         // The Index Here will be tricky
+         leftArr[i - left] = arr.get(i);
+     }
+     for (int i = middle + 1; i &lt;= right; i ++){
+         rightArr[i - middle - 1] = arr.get(i);
+     }
+     int leftArrHead = 0, rightArrHead = 0, originArrHead = left;
+     while (leftArrHead &lt; leftArr.length && rightArrHead &lt; rightArr.length){
+         if (leftArr[leftArrHead] &lt; rightArr[rightArrHead]){
+             arr.set(originArrHead, leftArr[leftArrHead]);
+             leftArrHead += 1;
+         }
+         else{
+             arr.set(originArrHead, rightArr[rightArrHead]);
+             rightArrHead += 1;
+         }
+         originArrHead += 1;
+     }
+     // Deal with the Remaining Elements in Left / Right Array.
+     while (leftArrHead &lt; leftArr.length){
+         arr.set(originArrHead, leftArr[leftArrHead]);
+         leftArrHead += 1; originArrHead += 1;
+     }
+     while (rightArrHead &lt; rightArr.length){
+         arr.set(originArrHead, rightArr[rightArrHead]);
+         rightArrHead += 1; originArrHead += 1;
+     }
+ }
+</code>
+</pre>
+
 #### 快速排序 Quick Sort
 
 > 时间复杂度 $O(n\log{n})$
 >
 > 《算法导论》Page 170 - 180
 
-> ⚠ 在实现这一个算法前，你应该对函数和递归有较为清楚的了解，如果你对递归还不是很熟练，可以先在这个网站 [Coding Bat](https://codingbat.com/java) 完成 Recursion -1 与 Recursion - 2 的题目
+<div class="notification">
+⚠ 在实现这一个算法前，你应该对函数和递归有较为清楚的了解，如果你对递归还不是很熟练，可以先在这个网站 [Coding Bat](https://codingbat.com/java) 完成 Recursion -1 与 Recursion - 2 的题目
+</div>
 
 **伪代码**
 
