--- a/_posts/acsl-note/2020-02-10-ACSL-Round2.md
+++ b/_posts/acsl-note/2020-02-10-ACSL-Round2.md
@@ -201,12 +201,12 @@ $$
 
 将左边$k$位直接拼接在剩下那一份的右侧
 
-> Example: $\text{RCIRC-}3\; 01101011$
+> Example: $\text{LCIRC-}3\; 01101011$
 > 
 > $$
-> \text{RCIRC-}3\; 01101011
+> \text{LCIRC-}3\; 01101011
 > \rightarrow
-> \text{RCIRC-}3\; \begin{array}{c|c}\color{red}{011}&01011\end{array}
+> \text{LCIRC-}3\; \begin{array}{c|c}\color{red}{011}&01011\end{array}
 > \rightarrow
 > 01011\color{red}{011}
 > $$
