Update Algorithm Notes

--- a/_posts/notes/Algorithm/2021-02-22-Sorting.md
+++ b/_posts/notes/Algorithm/2021-02-22-Sorting.md
@@ -319,3 +319,60 @@ def mergesort(a, b, e):
 **伪代码**
 
 <img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210222195200.png" alt="image-20210222195159916" style="zoom:67%;" /><img src="https://gitee.com/MarkYutianChen/mark-markdown-imagebed/raw/master/20210222195142.png" alt="image-20210222195142159" style="zoom:50%;" />
+
+**代码实现**
+
+<pre>
+    <code class="python">
+def quick_sort(array,begin,end):
+    if begin&lt;end:
+        mid = partition(array, begin, end)
+        quick_sort(array,begin,mid-1)
+        quick_sort(array,mid,end)
+
+def partition(array,low,high):
+    key = array[low]
+    while low &lt; high:
+        while low &lt; high and array[high] &gt;= key:
+            high -= 1
+        if low &lt; high:
+            array[low] = array[high]
+
+        while low &lt; high and array[low] &lt; key:
+            low += 1
+        if low &lt; high:
+            array[high] = array[low]
+    array[low] = key
+    return low
+    </code>
+    <code class="java">
+  public static void quickSort(ArrayList&lt;Integer&gt; arr, int left, int right){
+  if (left &lt; right) {
+      int mid = Sort.quickPartition(arr, left, right);
+      quickSort(arr, left, mid - 1);
+      quickSort(arr, mid, right);
+  }
+}
+
+public static int quickPartition(ArrayList&lt;Integer&gt; arr, int left, int right){
+  int pivot = arr.get(left);
+  while (left &lt; right){
+      while (left &lt; right && arr.get(right) &gt;= pivot){
+          right -= 1;
+      }
+      if (left &lt; right){
+          arr.set(left, arr.get(right));
+      }
+
+      while (left &lt; right && arr.get(left) &lt; pivot){
+          left += 1;
+      }
+      if (left &lt; right){
+          arr.set(right, arr.get(left));
+      }
+  }
+  arr.set(left, pivot);
+  return left;
+}
+    </code>
+</pre>
