Update About Us, Club Rule

--- a/_posts/usaco-analysis/2020-11-17-USACO-Gold-2019-Open-2.md
+++ b/_posts/usaco-analysis/2020-11-17-USACO-Gold-2019-Open-2.md
@@ -3,7 +3,7 @@ layout: usaco-post
 title: USACO 2020 Open Gold P2
 tags: USACO-analysis
 status: OK
-author: 肖肖
+Author: 肖肖
 time: 2019
 group: Gold
 question: Open 2
