--- a/_posts/usaco-analysis/2020-12-01-USACO-Gold-2018-Open-1.md
+++ b/_posts/usaco-analysis/2020-12-01-USACO-Gold-2018-Open-1.md
@@ -3,7 +3,7 @@ layout: usaco-post
 title: USACO 2018 Open Gold P1
 tags: USACO-analysis
 status: OK
-author: 肖肖
+Author: 肖肖
 time: 2018
 group: Gold
 question: Open 1
