--- a/_posts/usaco-analysis/2020-12-15-USACO-Gold-2017-Dec-3.md
+++ b/_posts/usaco-analysis/2020-12-15-USACO-Gold-2017-Dec-3.md
@@ -3,7 +3,7 @@ layout: usaco-post
 title: USACO 2017 Dec Gold P2
 tags: USACO-analysis
 status: OK
-author: Mark
+Author: Mark
 time: 2017
 group: Gold
 question: Dec 2
