--- a/_posts/2021-01-26-All-Posts.md
+++ b/_posts/2021-01-26-All-Posts.md
@@ -11,12 +11,10 @@ tags: page
 
 {% assign sorted_tags = site.tags | sort %}
 {% for tag in sorted_tags %}
-  <details style="outline: none">
-  <summary style="outline: none"><h3>{{ tag[0] }} ({{tag[1] | size}} posts)</h3></summary>
+  <h3>{{ tag[0] }} ({{tag[1] | size}} Posts)</h3>
   <ul>
     {% for post in tag[1] %}
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
-  </details>
 {% endfor %}
