--- a/_posts/usaco-analysis/2020-11-25-USACO-Gold-2017-Jan-3.md
+++ b/_posts/usaco-analysis/2020-11-25-USACO-Gold-2017-Jan-3.md
@@ -3,7 +3,7 @@ layout: usaco-post
 title: USACO 2017 Jan Gold P3
 tags: USACO-analysis
 status: OK
-author: Mark
+Author: Mark
 time: 2017
 group: Gold
 question: Jan 3
