--- a/_posts/usaco-analysis/2020-12-10-USACO-Gold-2017-Dec-1.md
+++ b/_posts/usaco-analysis/2020-12-10-USACO-Gold-2017-Dec-1.md
@@ -3,7 +3,7 @@ layout: usaco-post
 title: USACO 2017 Dec Gold P1
 tags: USACO-analysis
 status: OK
-author: Mark
+Author: Mark
 time: 2017
 group: Gold
 question: Dec 1
