--- a/_posts/usaco-analysis/2021-01-07-USACO-Gold-2020-Open-1.md
+++ b/_posts/usaco-analysis/2021-01-07-USACO-Gold-2020-Open-1.md
@@ -3,7 +3,7 @@ layout: usaco-post
 title: USACO 2020 Open Gold P1
 tags: USACO-analysis
 status: OK
-author: lrg
+Author: lrg
 time: 2020
 group: Gold
 question: Open 1
