Update Page Tags, Update Footer, Update For Beginner Part

--- a/_posts/2021-01-26-About-Us.md
+++ b/_posts/2021-01-26-About-Us.md
@@ -2,12 +2,12 @@
 layout: page
 title: About Us
 categories: secondary-pages
-tags: page
+tags: Page
 ---
 
 <div style="clear:right"></div>
 
-<img src="{{ site.baseurl }}/assets/aboutUs_1.svg" height="35%" width="35%" style="float:left; margin: 10px"/>
+<img src="{{ site.baseurl }}/assets/AboutUs_1.svg" height="35%" width="35%" style="float:left; margin: 10px"/>
 
 我们是广外 CS 社，我们希望为所有对计算机科学感兴趣的人建立一个共同的社区。在这个社区中，我们分享自己的知识，互相帮助，互相学习。
 
