--- a/_posts/2021-01-26-Schedule.md
+++ b/_posts/2021-01-26-Schedule.md
@@ -2,7 +2,7 @@
 layout: page
 title: Schedule
 categories: secondary-pages
-tags: page
+tags: Page
 ---
 <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
 <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
