--- a/_posts/acsl-note/2021-01-26-ACSL.md
+++ b/_posts/acsl-note/2021-01-26-ACSL.md
@@ -2,7 +2,7 @@
 layout: page
 title: America Computer Science League (ACSL)
 categories: tertiary-pages
-tags: page
+tags: Page
 ---
 <div class="info">
     <h3>⚠ 2021年编程题变化</h3>
