--- a/_posts/2021-01-26-All-Posts.md
+++ b/_posts/2021-01-26-All-Posts.md
@@ -2,7 +2,7 @@
 layout: page
 title: All Posts
 categories: secondary-pages
-tags: page
+tags: Page
 ---
 
 这里记录了该网站所有的页面，并且按照页面的 Tag 进行了分类。用 `ctrl + f` 或者 `command + f` 来直接搜索你想看的页面吧！
