Update ACSL Note and Algo Note

--- a/_posts/acsl-note/2021-01-26-ACSL.md
+++ b/_posts/acsl-note/2021-01-26-ACSL.md
@@ -26,7 +26,7 @@ tags: Page
             LISP
         </p>
     </div>
-    <div class="lite-card">
+    <div class="lite-card" onClick="window.location.href='{{ site.baseurl }}/2021/03/11/ACSL-Round3.html'">
         <h3>ACSL Round 3</h3>
         <p>
             Data Structure<br/>
