--- a/_posts/notes/Algorithm/2021-03-09-Sort-List.md
+++ b/_posts/notes/Algorithm/2021-03-09-Sort-List.md
@@ -253,4 +253,7 @@ print(arr)
         <li><online></online><a href="https://leetcode.com/problems/wiggle-sort-ii/">LeetCode Problem 324. Wiggle Sort II</a></li>
         <li><online></online><a href="https://leetcode.com/problems/sort-array-by-parity-ii/">LeetCode Problem 922. Sort Array By Parity II</a></li>
         <li><online></online><a href="https://leetcode.com/problems/remove-duplicates-from-sorted-list-ii/">LeetCode Problem 82. Remove Duplicates from Sorted List II</a></li>
+        <li><online></online><a href="http://www.usaco.org/index.php?page=viewproblem2&cpid=896">USACO 2019 Jan Silver P3</a></li>
+        <li><online></online><a href="http://www.usaco.org/index.php?page=viewproblem2&cpid=787">USACO 2018 Jan Silver P2</a></li>
+        <li><online></online><a href="http://www.usaco.org/index.php?page=viewproblem2&cpid=786">USACO 2019 Jan Silver P1</a></li>
 </ul>
